a few copy changes

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 					<p>Professional JavaScript Programmers not entirely required...</p>
 					<aside class="notes">
 						<ul>
-							<li>I've never coded anything - You'll die trying to make this work.</li>
-							<li>I'm a HTML/CSS Guy (or Girl) with OK JS Chops - You'll struggle but might be able to pull it off.</li>
-							<li>I'm a professioanl JavaScript programmer - Appcelerator will be a breeze and it will only take you a few days to get comfortable.</li>
+							<li>If you've never coded anything - this isn't a good framework for you.</li>
+							<li>If you're HTML/CSS Guy (or Girl) with OK JS Chops - You'll struggle but might be able to pull it off.</li>
+							<li>If you're a professioanl JavaScript programmer - Appcelerator will be a breeze and it will only take you a few days to get comfortable.</li>
 						</ul>
 					</aside>
 				</section>
@@ -429,7 +429,7 @@ require('vendor/form_validator').createFormValidator
 				</section>
 
 				<section data-state="alert">
-					<h1>Not so opensource</h1>
+					<h1>Opensource</h1>
 					<ol class="spaced">
 						<li>Create a ticket in their bug tracking sytem</li>
 						<li>Create a signed CLA</li>
